--- a/app.env
+++ b/app.env
@@ -1,2 +1,7 @@
 DATABASE_URL=postgres://root:secret@localhost:5432/web_app
 SERVER_PORT=0.0.0.0:8081
+MIGRATION_URL=file://db/migration
+POSTGRES_USER=root
+POSTGRES_PASSWORD=secret
+POSTGRES_DB=web_app
+DB_SOURCE=postgres://root:secret@localhost:5432/web_app?sslmode=disable
