--- a/app.env
+++ b/app.env
@@ -1,7 +1,8 @@
-DATABASE_URL=postgres://root:secret@localhost:5432/web_app
+DATABASE_URL=postgres://root:secret@localhost:5432/web_app?sslmode=disable
 SERVER_PORT=0.0.0.0:8081
-MIGRATION_URL=file://db/migration
+MIGRATION_URL=file://internal/app/migrations
 POSTGRES_USER=root
 POSTGRES_PASSWORD=secret
 POSTGRES_DB=web_app
 DB_SOURCE=postgres://root:secret@localhost:5432/web_app?sslmode=disable
+DSN="host=localhost user=root password=secret dbname=web_app port=5432 sslmode=disable"
